# mdbook-plotly

./: .gitignore  Cargo.toml  LICENSE  README-zh_CN.md  README.md  USAGE-zh_CN.md
.github/workflows/: release.yml
docs/: CHANGELOG.md  USAGE-zh_CN.md  USAGE.md
src/: code_handler.rs  command.rs  handler.rs  lib.rs  macros.rs  main.rs  preprocessor.rs
src/code_handler/: parse_context.rs  plot_obj_parser.rs  until.rs
src/code_handler/plot_obj_parser/: bar_parser.rs  box_plot_parser.rs  candlestick_parser.rs  common.rs  contour_parser.rs  density_mapbox_parser.rs  heat_map_parser.rs  histogram_parser.rs  image_parser.rs  layout_parser.rs  mesh3d_parser.rs  ohlc_parser.rs  pie_parser.rs  sankey_parser.rs  scatter3d_parser.rs  scatter_geo_parser.rs  scatter_mapbox_parser.rs  scatter_parser.rs  scatter_polar_parser.rs  surface_parser.rs  table_parser.rs  trace_registry.rs
src/handler/: chapter_handler.rs
src/preprocessor/: bookdata.rs  config.rs  handlers.rs  js_tools.rs
src/preprocessor/handlers/: code_handler.rs  plotly_html_handler.rs  plotly_svg_handler.rs
src/preprocessor/handlers/code_handler/: bar_parser.rs  pie_parser.rs  plot_obj_parser.rs  scatter_parser.rs  until.rs
src/preprocessor/handlers/code_handler/plot_obj_parser/: bar_parser.rs  candlestick_parser.rs  density_mapbox_parser.rs  histogram_parser.rs  image_parser.rs  ohlc_parser.rs  pie_parser.rs  sankey_parser.rs  scatter_geo_parser.rs  scatter_mapbox_parser.rs  scatter_parser.rs  scatter_polar_parser.rs  table_parser.rs
src/preprocessor/js_tools/: __inter_very_happy_dom__.js  basic.rs  bindings.js  bindings.rs  practical.rs
tests/: test_code_handler.rs  test_code_map.rs  test_code_type.rs
