[package]
name = "mdbook-plotly"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
colog = "1.4"
log = "0.4"
mdbook-preprocessor = "0.5"
serde = "1.0"
serde_json = "1.0"
pulldown-cmark = { version = "0.13", default-features = false }
pulldown-cmark-to-cmark = { version = "22.0", default-features = false }
rayon = { version = "1.11", optional = true }
plotly = { version = "0.14", features = ["static_export_default"] }

[features]
default = ["full-handlers", "sync"]
sync = ["dep:rayon"]
full-handlers = ["plotly-svg-handler"]
plotly-svg-handler = []
