[package]
name = "mdbook-plotly"
version = "0.1.0"
authors = ["TickPoints <tickpoints@outlook.com>"]
edition = "2024"
description = "An mdbook preprocessor that renders plot code blocks (e.g., ```plot) into interactive or static charts during book build."
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
colog = "1.4"
log = "0.4"
mdbook-preprocessor = "0.5"
serde = "1.0"
serde_json = "1.0"
pulldown-cmark = { version = "0.13", default-features = false }
pulldown-cmark-to-cmark = { version = "22.0", default-features = false }
rayon = { version = "1.11", optional = true }
plotly = "0.14"
json5 = "1.3"

[features]
default = ["sync", "default-handlers"]
sync = ["dep:rayon"]
default-handlers = ["plotly-html-handler"]
full-handlers = ["plotly-svg-handler", "plotly-html-handler"]
plotly-backed = ["plotly/static_export_default"]
plotly-svg-handler = ["plotly-backed"]
plotly-html-handler = []

[profile.release]
opt-level = "z"
lto = true
